class Aluno:
    
    def __init__(self, nome, cpf, telefone, data_nascimento, endereco):
        self._nome = nome
        self._cpf = cpf
        self._telefone = telefone
        self._data_nascimento = data_nascimento
        self._endereco = endereco

    def mostrar_nome(self):
        print(self._nome)