class Area:
    
    def __init__(self, nome, descricao, codigo_area, coordenador):
        self._nome = nome
        self._descricao = descricao
        self._codigo_area = codigo_area
        self._coordenador = coordenador
