class Campus:
    
    def __init__(self, nome, endereco, codigo_campus, reitor):
        self._nome = nome
        self._endereco = endereco
        self._codigo_campus = codigo_campus
        self._reitor= reitor