class Curso:
    
    def __init__(self, nome, codigo_curso, formacao, modalidade, duracao, professor, area):
        self._nome = nome
        self._codigo_curso = codigo_curso
        self._formacao = formacao
        self._modalidade = modalidade
        self._duracao = duracao
        self._professor = professor
        self._area = area

    