class Disciplina:
    
    def __init__(self, nome, semestre, codigo_disciplina, carga_horaria, turno, modalidade_disciplina, descricao, curso, professor):
        self._nome = nome
        self._semestre = semestre
        self._codigo_disciplina = codigo_disciplina
        self._carga_horaria = carga_horaria
        self._turno = turno
        self._modalidade_disciplina = modalidade_disciplina
        self._descricao = descricao
        self._curso = curso
        self._professor = professor
