class Funcionario:
    
    def __init__(self, nome, cpf, telefone, email):
        self._nome = nome
        self._cpf = cpf
        self._telefone = telefone
        self._email = email