class Matricula:
    
    def __init__(self, codigo_matricula, tipo, data, aluno, disciplina):
        self._codigo_matricula = codigo_matricula
        self._tipo = tipo
        self._data = data
        self._aluno = aluno
        self._disciplina = disciplina