class Turma:
    
    def __init__(self, codigo_turma, dia_semana, horario, sala, professor, aluno, disciplina):
        self._codigo_turma = codigo_turma
        self._dia_semana = dia_semana
        self._horario = horario
        self._sala = sala
        self._professor = professor
        self._aluno = aluno
        self._disciplina = disciplina
  