@startuml universidade

title Matrícula de Universidade

class Aluno{
    - nome: String
    - cpf: Integer
    - telefone: Integer
    - data_nascimento: date
    - endereco: String
    + construtor (nome, matricula, data_nascimento, endereco)
}

class Funcionario{
    - nome: String
    - cpf: Integer
    - telefone: String
    - email: String
    + construtor (nome, cpf, telefone, email)
}

class Professor{
    - graducao: String
    - salario: Integer
    - carga_horaria_semanal: int
    - numero_de_disciplinas_lecionadas: int
    + construtor (graduacao, carga_horaria_semanal)
}

class Coordenador{
    - formacao: String
    - salario: Integer
    - numero_de_cursos_coordenados: Integer
    + construtor (salario)
}

class Reitor{
    - salario: Integer
    - numero_de_campus_administrados: Integer
    + construtor (salario)
}

class Turma{
    - codigo_turma: String
    - ano: int
    - semestre: int
    - dia_semana: String
    - horario: String
    - sala: String
    - professor: Professor
    - aluno: Aluno
    - disciplina: Disciplina
    + construtor (codigo_turma, ano, semestre, dia_semana, horario, sala, professor, aluno, disciplina)
}

class Matricula{
    - codigo_matricula: int
    - tipo: String
    - data: date
    - aluno: aluno
    - disciplina: disciplina
    + construtor (codigo_matricula, tipo, data, aluno,disciplina)
}


class Disciplina{
    - nome: String
    - semestre: String
    - codigo_disciplina: int
    - carga_horaria: Float
    - turno: String
    - modalidade_disciplina: String
    - descricao: String
    - curso: Curso
    - professor: Curso
    + construtor (nome, codigo_disciplina, carga_horaria, turno, modalidade_disciplina, descricao, curso)
}

class Curso{
    - nome: String  
    - codigo_curso: int
    - formacao: String
    - modalidade: String
    - duracao: String
    - area: Area
    + construtor (nome, codigo_curso, formacao, modalidade, duracao, area)
}

class Area{
    - nome: String
    - descricao: String
    - codigo_area: int
    - coordenador: Coordenador
    + construtor (nome, descricao, codigo_area, coordenador)
}

class Campus{
    - nome: String
    - endereco: String
    - codigo_campus: int
    - reitor: String
    + construtor (nome, endereco, codigo_campus, reitor)
}

Funcionario <|-- Professor
Funcionario <|-- Coordenador
Funcionario <|-- Reitor
Turma *-- Aluno
Turma *-- Professor
Turma *---up Disciplina
Campus *-- Reitor
Disciplina *-- Curso
Curso *-- Area
Area *--- Coordenador
Matricula *-- Aluno
Matricula *-- Disciplina

@enduml